# Freya

./: .gitignore  ;  CMakeLists.txt  README.md  TODO.md
assets/: asset_list.frlist
cmake/: utils.cmake
freya/: CMakeLists.txt
freya/include/: freya.h  freya_animation.h  freya_app.h  freya_assets.h  freya_audio.h  freya_base.h  freya_containers.h  freya_entity.h  freya_event.h  freya_file.h  freya_gfx.h  freya_gui.h  freya_input.h  freya_logger.h  freya_math.h  freya_memory.h  freya_noise.h  freya_pch.h  freya_physics.h  freya_render.h  freya_threads.h  freya_tilemap.h  freya_timer.h  freya_ui.h  freya_window.h
freya/src/animation/: animation.cpp
freya/src/assets/: asset_manager.cpp
freya/src/assets/frlist/: frlist.cpp  frlist.h  frlist_lexer.cpp  frlist_parser.cpp
freya/src/audio/: openal_backend.cpp
freya/src/core/: clock.cpp  engine.cpp  event.cpp  input.cpp  logger.cpp  memory.cpp  timer.cpp  window.cpp
freya/src/entity/: entity.cpp
freya/src/filesystem/: file.cpp  filepath.cpp  filesystem.cpp  filewatcher.cpp
freya/src/freya_assets/: asset_manager.cpp
freya/src/freya_assets/asset_list/: frlist_parser.cpp  list.cpp  list.h
freya/src/freya_assets/frlist/: frlist.cpp  frlist.h  frlist_parser.cpp
freya/src/freya_assets/loaders/: asset_loaders.h  audio_loader.cpp  font_loader.cpp  lua_state_loader.cpp  shader_loader.cpp  texture_loader.cpp  ui_config_loader.cpp
freya/src/graphics/: gl_backend.cpp  gles_backend.cpp
freya/src/graphics/gl/: gl_backend.cpp  gl_common.cpp  gl_common.h  gles_backend.cpp
freya/src/math/: common.cpp  matrix.cpp  point.cpp  poisson_disk.cpp  quaternion.cpp  random.cpp  transform.cpp  vector.cpp  vertex.cpp
freya/src/noise/: noise_generator.cpp
freya/src/physics/: box2d_backend.cpp
freya/src/renderer/: DEP_renderer.cpp  animation.cpp  animator.cpp  camera.cpp  color.cpp  particles.cpp  post_process.cpp  renderer.cpp  shader_context.cpp  ui_renderer.cpp
freya/src/renderer/post_process_effects/: blur_pass.cpp  greyscale_pass.cpp  hdr_pass.cpp  post_process_passes.h  vignette_pass.cpp
freya/src/renderer/shaders/: batch_shader.h  batch_shaders.h  blur_shader.h  default_pass_shader.h  greyscale_shader.h  post_processing_shaders.h  ui_shader.h  ui_shaders.h  vignette_shader.h
freya/src/renderer/ui/: ui_renderer_impl.cpp  ui_renderer_impl.h
freya/src/threads/: thread_pool.cpp
freya/src/tile/: tilemap.cpp
freya/src/ui/: gui.cpp  rmlui_backend.cpp  ui_text.cpp
libs/fontstash/: fontstash.cpp
libs/glad/: glad.c  glad.h
libs/sokol/: sokol.c  sokol_gp.h
scripts/: build-freya.ps1  build-freya.sh  reload-shaders.ps1  run-testbed.sh
testbed/: CMakeLists.txt
testbed/engine_testbed/: app.cpp  app.cpp~  app.h  main.cpp  main.cpp~
testbed/lua_testbed/: app.cpp  main.cpp
testbed/noise_testbed/: app.cpp  app.h  main.cpp
testbed/particles_testbed/: app.cpp  main.cpp
testbed/pathfinding_testbed/: app.cpp  main.cpp
testbed/physics_testbed/: app.cpp  main.cpp
testbed/poisson_testbed/: app.cpp  main.cpp
testbed/tilemap_testbed/: app.cpp  main.cpp
testbed/ui_testbed/: app.cpp  main.cpp
